fix: disable full dark mode when color sheme is dark

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -201,17 +201,6 @@ a {
     box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-    html {
-        color-scheme: dark;
-    }
-
-    body {
-        color: white;
-        background: black;
-    }
-}
-
 .technologies li {
     position: absolute;
     display: block;
